# anevicon

./: .fuse_hidden000048ef0000001a  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  anevicon_core.tar.xz  appimage.sh  build.rs  demo.yml  rustfmt.toml  terminalizer.yml
anevicon.AppDir/: .DirIcon  AppRun  anevicon  anevicon-x86_64.AppImage  anevicon.desktop
anevicon_core/: Cargo.toml  README.md
anevicon_core/examples/: README.md  minimal.rs
anevicon_core/src/: lib.rs  options.rs  sendmmsg.rs  summary.rs  tester.rs  testing.rs
files/: packet.txt  second_packet.txt
src/: config.rs  display_error_causes.rs  errors_utils.rs  helpers.rs  logging.rs  main.rs  select_interface.rs  sockets.rs  summary.rs  tester.rs  testers.rs  testing.rs
src/config/: endpoints.rs  mod.rs
src/core/: construct_packets.rs  construct_payload.rs  create_sockets.rs  mod.rs  packets.rs  packets_buffer.rs  select_interface.rs  sockets.rs  summary.rs  test_utils.rs  tester.rs
src/core/construct_packets/: construct_payload.rs  mod.rs
src/core/craft_datagrams/: craft_packets.rs  craft_payload.rs  mod.rs
src/core/statistics/: mod.rs  summary_portion.rs  test_summary.rs
src/core/udp_sender/: handle_icmp.rs  icmp.rs  mod.rs  sendmmsg.rs  sendmmsg_wrapper.rs  udp_sender.rs
src/testing/: helpers.rs  mod.rs  sockets.rs
