[package]
name = "anevicon"
description = "A high-performant UDP-based load generator, written in Rust"
repository = "https://github.com/Gymmasssorla/anevicon"
homepage = "https://github.com/Gymmasssorla/anevicon"
version = "7.0.8"
authors = ["Temirkhan Myrzamadi <gymmasssorla@gmail.com>"]
keywords = ["anevicon", "ddos-attacks", "load-generator", "stress-testing", "pentest-tool"]
categories = ["command-line-utilities", "simulation", "network-programming"]
readme = "README.md"
license = "GPL-3.0-only"
edition = "2018"
exclude = ["DEMO.png"]

[dependencies]
fern = "0.5.8"
structopt = "0.2.16"
rand = "0.6.5"
etherparse = "0.8.2"
time = "0.1.42"
humantime = "1.2.0"
libc = "0.2.60"
failure = "0.1.5"
log = "0.4.6"
failure_derive = "0.1.5"
termion = "1.5.2"

[dev-dependencies]
lazy_static = "1.3.0"

[badges]
travis-ci = { repository = "Gymmasssorla/anevicon", branch = "master" }
maintenance = { status = "passively-maintained" }

[profile.release]
lto = true