[package]
name = "anevicon_core"
description = "The most powerful UDP-based load generator, written in Rust"
repository = "https://github.com/Gymmasssorla/anevicon"
version = "0.5.1"
authors = ["Temirkhan Myrzamadi <gymmasssorla@gmail.com>"]
keywords = ["anevicon", "ddos-attacks", "load-generator", "stress-testing", "pentest-tool"]
categories = ["command-line-utilities", "simulation", "network-programming"]
readme = "README.md"
license = "GPL-3.0-only"
edition = "2018"

[dependencies]
sendmmsg = "0.3.5"

[dev-dependencies]
lazy_static = "1.3.0"

[badges]
travis-ci = { repository = "Gymmasssorla/anevicon", branch = "master" }
maintenance = { status = "actively-developed" }